manifests/splunk/splunk-idxc-cm.yml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: s1-cm
spec:
  gateways:
    - istio-system/shared-gateway
  hosts:
    - s1-cm.${DOMAIN_NAME}
  http:
    - name: "ui_insecure"
      match:
        - port: 80
      route:
        - destination:
            host: splunk-s1cm-cluster-master-service.splunk.svc.cluster.local
            port:
              number: 8000
    - name: "ui"
      match:
        - port: 443
      route:
        - destination:
            host: splunk-s1cm-cluster-master-service.splunk.svc.cluster.local
            port:
              number: 8000
          headers:
            request:
              set:
                "X-Forwarded-Host": "s1-cm.${DOMAIN_NAME}"
                "X-Forwarded-Port": "443"
                "X-Forwarded-Proto": https

    - name: "mgmt"
      match:
        - port: 8089
      route:
        - destination:
            host: splunk-s1cm-cluster-master-service.splunk.svc.cluster.local
            port:
              number: 8089
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: s1cm
spec:
  host: splunk-s1cm-cluster-master-service.splunk.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8089
        tls:
          mode: SIMPLE
