manifests/splunk/splunk-idxc-peers.yml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: s1-inputs
spec:
  gateways:
    - istio-system/shared-gateway
  hosts:
    - s1-inputs.${DOMAIN_NAME}
  tls:
    - match:
        - port: 9998
          sniHosts:
            - s1-inputs.${DOMAIN_NAME}
      route:
        - destination:
            host: splunk-s1-indexer-service.splunk.svc.cluster.local
            port:
              number: 9998
  http:
    - name: "hec"
      match:
        - port: 8088
      route:
        - destination:
            host: splunk-s1-indexer-service.splunk.svc.cluster.local
            port:
              number: 8088
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: s1-idxc
spec:
  host: splunk-s1-indexer-service.splunk.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 9998
        tls:
          mode: DISABLE
