manifests/splunk/splunk-shc.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: s1-shc
spec:
  gateways:
    - istio-system/shared-gateway
  hosts:
    - s1-shc.${DOMAIN_NAME}
  http:
    - name: "ui_insecure"
      match:
        - port: 80
      route:
        - destination:
            host: splunk-s1-search-head-service.splunk.svc.cluster.local
            port:
              number: 8000
    - name: "ui"
      match:
        - port: 443
      route:
        - destination:
            host: splunk-s1-search-head-service.splunk.svc.cluster.local
            port:
              number: 8000
          headers:
            request:
              set:
                "X-Forwarded-Host": "s1-shc.${DOMAIN_NAME}"
                "X-Forwarded-Port": "443"
                "X-Forwarded-Proto": https
    - name: "mgmt"
      match:
        - port: 8089
      route:
        - destination:
            host: splunk-s1-search-head-service.splunk.svc.cluster.local
            port:
              number: 8089
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: s1-shc
spec:
  host: splunk-s1-search-head-service.splunk.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8000
        loadBalancer:
          consistentHash:
            httpCookie:
              name: x-lb-session
              ttl: 3600s
      - port:
          number: 8089
        tls:
          mode: SIMPLE
        loadBalancer:
          consistentHash:
            httpCookie:
              name: x-lb-session
              ttl: 3600s
